# FactoryFlexibilityModel

./: .gitignore  Partial  README.md  Undefined_Factory.factory  config.ini.template  dict.pkl  pyproject.toml
dri_functions/: collect_results.py  create_diagrams.py  create_heatmap.py  create_partial_utilization_plot.py  dri_factory_definitions.py  dri_simulation.py  gui.py  open_dashboard.py
examples/: COP_Profile.xlsx  DEMO_COP_Profile.xlsx  bayesian_sampler.py  create_desktop_shortcut.py  demo_timeseries.xlsx  main.py  simple_simulation_call.py
examples/DRI_Partial/layout/: Layout.factory
examples/DRI_Partial/scenarios/: default.sc
examples/DRI_steel_factory/: Layout.factory  flowtypes.txt  parameters.txt  timeseries.txt  units.txt
examples/DRI_steel_factory/simulations/: Unspecified Simulation (05.09.2023 10-53-44).sim  Unspecified Simulation (05.09.2023 14-24-53).sim  Unspecified Simulation (05.09.2023 17-20-33).sim  Unspecified Simulation (06.09.2023 10-40-35).sim  Unspecified Simulation (08.09.2023 14-20-10).sim  Unspecified Simulation (08.09.2023 14-37-57).sim  Unspecified Simulation (08.09.2023 14-43-06).sim
examples/Demo/: Demo.ffm
examples/Demo/layout/: Layout.factory
examples/Demo/scenarios/: default.sc
examples/Demo_01/: Demo_01.ffm  Layout.factory  flowtypes.txt  parameters.txt  timeseries.csv  units.txt
examples/Demo_02/: Demo_02.ffm  HyperSyS.xlsx  LKW_demands.xlsx  Layout.factory  demands.txt  flowtypes.txt  parameters.txt  timeseries.csv
examples/Demo_02/layout/: Layout.factory
examples/Demo_02/scenarios/: default.sc
examples/Demo_03/layout/: Layout.factory
examples/SPIES_2024/: SPIES_2024.ffm
examples/SPIES_2024/scenarios/: default.sc
examples/Sustainable_Home/: Layout.factory  Sustainable_Home.ffm  flowtypes.txt
examples/Sustainable_Home/simulations/: Unspecified Simulation (14.09.2023 14-07-14).sim
examples/Template/: Layout.factory  flowtypes.txt  parameters.txt  timeseries.txt  units.txt
examples/Testlayout/: Layout.factory  flowtypes.txt  parameters.txt  timeseries.txt
examples/Testlayout/simulations/: Unspecified Simulation (05.09.2023 09-21-49).sim  Unspecified Simulation (05.09.2023 09-21-56).sim
examples/Usecase_Blackbox_Optimizer_Study/: usecase_blackbox_optimizer_study.ffm
examples/Usecase_Blackbox_Optimizer_Study/layout/: Layout.factory
examples/Usecase_Blackbox_Optimizer_Study/scenarios/: default.sc
examples/usecase_blackbox_optimizer/: Blackbox_Optimizer_Study_Timeseries.xlsx  LKW_demands_full_year.xlsx  usecase_blackbox_optimizer.ffm
examples/usecase_blackbox_optimizer/layout/: Layout.factory
examples/usecase_blackbox_optimizer/scenarios/: default.sc
factory_flexibility_model/: calculate_sensitivities.py  input_validations.py  main.py
factory_flexibility_model/dash/: dash.py
factory_flexibility_model/dash/dash_functions/: create_cost_overview.py  create_emission_overview.py  create_layout_html.py  get_converter_primary_flow.py
factory_flexibility_model/factory/: Blueprint.py  Components.py  Connection.py  DataValue.py  Factory.py  Flowtype.py  Unit.py  blueprint.py  components.py  connection.py  factory.py  factory_blueprint.py  factory_components.py  factory_connection.py  factory_flow.py  factory_model.py  flowtype.py
factory_flexibility_model/io/: factory_import.py  input_validations.py  read_config.py  session.py  set_logger.py  xlsx_io.py
factory_flexibility_model/simulation/: Scenario.py  Simulation.py  factory_simulation.py  scenario.py  simulation.py
factory_flexibility_model/simulation/optimization_components/: __init__.py  add_converter.py  add_deadtime.py  add_flows.py  add_heatpump.py  add_pool.py  add_schedule.py  add_sink.py  add_slack.py  add_source.py  add_storage.py  add_thermalsystem.py  add_triggerdemand.py  solve.py
factory_flexibility_model/ui/: FactoryModelGUI.kv  color.py  dash.py  factory_creation_GUI.py  kivy_gui.py
factory_flexibility_model/ui/dialogs/: component_config_tab.kv  converter_ratio_dialog.kv  converter_ratio_dialog.py  dialog_component_definition.kv  dialog_component_definition.py  dialog_converter_ratios.kv  dialog_converter_ratios.py  dialog_new_session.kv  dialog_new_session.py  dialog_parameter_config.kv  dialog_parameter_config.py  dialog_save_session_as.kv  dialog_save_session_as.py  dialog_session_config.kv  dialog_session_config.py  dialog_unit_definition.kv  dialog_unit_definition.py  left_main_menu.kv  left_main_menu.py  main_menu.kv  main_menu.py  parameter_config_dialog.kv  parameter_config_dialog.py  timeseries_overview.kv  unit_definition_dialog.kv  unit_definition_dialog.py
factory_flexibility_model/ui/gui_components/: import_gui_components.py  layout_timeseries_overview.py
factory_flexibility_model/ui/layouts/: component_config_tab.kv  component_config_tab.py  config_tab_schedule.py  config_tab_source.py  main_menu.kv  main_menu.py  (+1 more)
factory_flexibility_model/web/: factory_dash.py
sessions/Partial_Replacement_DRI/: Layout.factory  Partial Replacement DRI.ffm  demands.txt  flowtypes.txt  parameters.txt  steel demand.xlsx  timeseries.csv  timeseries_data.xlsx  units.txt
simulations/: simulation_config.txt
simulations/input_data/: DRI Parameters.xlsx
simulations/output_data/: DRI_Auswertung.xlsx
tests/: DRI_factories.py  calculate_sensitivities.py  old_tests.py  testblueprint.py  testfactory.py  testscenario.py
(+69 files in other folders)
