[tool.poetry]
name = "watts-insight"
version = "1.2"
description = ""
authors = ["Simon Kammerer <simon.kammerer@volterica.com>"]
readme = "README.md"
packages = [{include = "factory_flexibility_model"}]

[tool.poetry.dependencies]
python = ">=3.11, <4"
dash = "^2.11.1"
dash-auth = "^1.4.1"
dash-bootstrap-components = "^1.4.2"
dash-bootstrap-templates = "^1.0.8"
datetime = "^5.2"
gurobipy = "^11.0.0"
joblib = "^1.3.1"
kivy = "^2.2.1"
kivymd = "^1.2.0"
kivy-garden-graph = "^0.4.0"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
openpyxl = "^3.1.2"
pandas = "^2.0.3"
plotly = "^5.15.0"
scipy = "^1.11.1"
xlsxwriter = "^3.1.2"
pyyaml = "^6.0.1"
python-decouple = "^3.8"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gui = "dri_functions.gui:gui"
dashboard = "dri_functions.open_dashboard:dash"
simulate = "dri_functions.dri_simulation:iterate_dri_simulations"
iterate = "dri_functions.scenario_iteration:iterate_simulations"
simulate_session = "examples.main:simulate_session"
heatmap = "dri_functions.create_heatmap"
boxplot = "dri_functions.create_diagrams:create_boxplot_dash"
collect_results = "dri_functions.collect_results:collect_results"
create_partial_plots = "dri_functions.create_partial_utilization_plot:create_partial_utilization_plot"
